fixed margin, still not showing correctly

--- a/src/MemoryCard.css
+++ b/src/MemoryCard.css
@@ -2,6 +2,7 @@
   display: inline-block;
   width: 150px;
   height: 80px;
+  margin: 5px;
   cursor: pointer;
   position: relative;
   perspective: 800px;
